2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Luca Feretti <elle.uca@libero.it>

	* gnome-settings-sound.desktop.in.in:
	* sound-properties-capplet.c: (main): use new icon name (patch from bug
	#397305)

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* icons/16x16/gnome-sound-properties.svg:
	* icons/22x22/gnome-sound-properties.svg:
	* icons/32x32/gnome-sound-properties.svg:
	* icons/scalable/gnome-sound-properties.svg:
	add new icons by Josef Vybíral (closes bug #397305)

2007-05-27  Jens Granseuer  <jensgr@gmx.net>

	* pipeline-tests.c: (user_test_pipeline): and don't use
	gtk_timeout_remove, either..

2007-05-27  Jens Granseuer  <jensgr@gmx.net>

	* pipeline-tests.c: (user_test_pipeline): use g_timeout_add() instead
	of the deprecated gtk_timeout_add()
	* sound-properties.glade: set non-0 pulse step for the progress bar to
	actually make it move (fixes bug #441587)

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (create_dialog), (main): don't crash if
	glade file is not available

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (create_dialog):
	* sound-properties.glade: set button images via code instead of
	relying on glade, so they respect the gtk-button-images xsetting

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-sound.desktop.in.in: renamed Bugzilla product.

2007-04-03  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (remove_device): move function inside
	USE_HAL

2007-04-03  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* sound-properties-capplet.c: (setup_default_mixer): ellipsize the
	device combobox (bug #425650)

2007-03-18  Christian Persch  <chpe@gnome.org>

	* sound-properties.glade: Fix button label alignment. Bug #416238.

2007-03-18  Christian Persch  <chpe@gnome.org>

	* sound-properties-capplet.c: (create_dialog): Revert unrelated change